--- a/app/assets/stylesheets/demands/_demands.scss
+++ b/app/assets/stylesheets/demands/_demands.scss
@@ -55,7 +55,7 @@
   a {
     font-size: 30px;
     position: relative;
-    right: 49%;
+    // right: 49%;
   }
   a:hover {
     color: $my-green;
@@ -132,13 +132,11 @@
   font-size: 12px;
   width: auto;
   position: relative;
-  left: 90%;
   padding: 15px 25px;
   margin-bottom: 20px;
   margin-top: 20px;
   font-family: $body-font;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  // border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .btn-recall-demands-delete {
@@ -147,11 +145,9 @@
   font-size: 12px;
   width: auto;
   position: relative;
-  left: 90%;
   padding: 15px 25px;
   margin-bottom: 20px;
   margin-top: 20px;
   font-family: $body-font;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  // border: 1px solid rgba(0, 0, 0, 0.1);
 }
