mailchimp set up

--- a/app/views/demand_mailer/destroy_confirmation.html.erb
+++ b/app/views/demand_mailer/destroy_confirmation.html.erb
@@ -1,6 +1,6 @@
 <p>Bonjour <%= @demand.user.first_name %>,</p>
 
-<p>Vous avez modifié votre cahier des charges. Nous espérons vous revoir bientôt</p>
+<p>Vous avez supprimé votre cahier des charges. Nous espérons vous revoir bientôt</p>
 
 <p>Rendez-vous sur notre site en suivant le lien suivant pour toutes nouvelles recherches :</p>
 
