--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -29,7 +29,7 @@
           <br> - de notre expérience dans la gestion de projets immobiliers acquise sur le terrain à rechercher, analyser et négocier pour le compte de différents types de clients sur diverses actifs.
           <br> - de notre expertise financière pour la construction des analyses économiques de votre projet afin de réaliser des benchmarks des différentes solutions.
           <br> - de nos conseils commerciaux et d'un accompagnement sur les accords juridiques que vous pourrez signer.
-          <br> - de nos recommandations afin de faire adhérer au plus grand nombre de vos collaborateurs un projet potentiellement novateur pour votre entreprise.
+          <br> - de nos recommandations afin de faire adhérer au plus grand nombre de vos collaborateurs à un projet potentiellement novateur pour votre entreprise.
           <br>
           <br>
           N'hésitez pas à venir consulter mon profil Linkedin pour décourvir plus en détail mon parcours.
