--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,9 +10,9 @@
     <% if user_signed_in? %>
 
     <!-- Links when logged in -->
-    <%= link_to "MES RECHERCHES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Mes cahiers des charges", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <%#= link_to "PROFIL", edit_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "CONTACTEZ-NOUS 06 17 98 75 96", pages_contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Contactez-nous 06 17 98 75 96", pages_contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
