--- a/app/assets/stylesheets/components/_sign_in.scss
+++ b/app/assets/stylesheets/components/_sign_in.scss
@@ -1,8 +1,35 @@
 .form-login {
-  background: $my-white;
+  background: white;
   padding: 10px 20px;
   margin-top: 50px;
   margin-bottom: 50px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .btn {
+    width: 100%;
+    margin-bottom: 20px;
+    color: $my-white;
+    font-size: 15px;
+  }
+  .help-block {
+    font-size: 10px;
+  }
+  .form-control {
+    font-size: 15px;
+  }
+}
+
+.form-login-password {
+  background: white;
+  padding: 10px 20px;
+  margin-top: 60px;
+  margin-bottom: 70px;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   h2 {
