--- a/app/assets/stylesheets/demands/_new_demand.scss
+++ b/app/assets/stylesheets/demands/_new_demand.scss
@@ -1,7 +1,7 @@
 .container .demand-container {
   padding: 2px;
   margin: 10px;
-  background-color: $my-white;
+  background-color: white;
   border-radius: 3px;
   box-shadow: 2px 1px 1px 2px rgba(0,0,0,0.1);
 }
