--- a/app/views/coworkings/new.html.erb
+++ b/app/views/coworkings/new.html.erb
@@ -14,14 +14,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-4">
-            <%= f.input :address, label: "Adresse", placeholder: "Votre adresse complète", hint: "Pour le respect de vos informations, votre marque ne sera visible qu'aux utilisateurs inscrits et confirmés" %>
+          <div class="col-xs-6">
+            <%= f.input :address, label: "Adresse", placeholder: "Votre adresse complète", hint: "Pour le respect de vos informations, votre adresse ne sera visible qu'aux utilisateurs inscrits et confirmés" %>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-3">
             <%= f.input :city, label: "Ville", placeholder: "La ville où est situé l'espace", hint: "Pour le respect de vos informations, votre marque ne sera visible qu'aux utilisateurs inscrits et confirmés" %>
           </div>
-          <div class="col-xs-4">
-            <%= f.input :zip, label: "Zip", placeholder: "Le code coworking-newale de la commune", hint: "Pour le respect de vos informations, votre marque ne sera visible qu'aux utilisateurs inscrits et confirmés" %>
+          <div class="col-xs-3">
+            <%= f.input :zip, label: "Zip", placeholder: "Code postale", hint: "Pour le respect de vos informations, votre marque ne sera visible qu'aux utilisateurs inscrits et confirmés" %>
           </div>
         </div>
         <div class="row">
@@ -171,68 +171,22 @@
             </div>
             <h2>Description de l'espace</h2>
           <!-- Inject categories here -->
-          <%= f.input :description, label: "Détails", placeholder: "Entièrement rénové avec une belle hauteur sous plafond...", hint: "Vous pouvez préciser d'autres services s'ils ne figurent pas dans les choix proposés" %>
+          <%= f.input :description, label: "Détails", placeholder: "Entièrement rénové avec une belle hauteur sous plafond...", hint: "Vous pouvez préciser d'autres services s'ils ne figurent pas dans les choix proposés. Nous vous conseillons de prendre le temps de décrire vos services. Vous pouvez faire la différence :)" %>
           <h2>Offres spéciales</h2>
           <div class="row">
               <div class="col-xs-12">
-              <%= f.input :special_offer, label: "Détails", placeholder: "1 mois offert pour toute réservation de plus de 6 mois...", hint: "Une offre spécial peut être une réduction sur une durée particulière. Cette ligne permet d'augmenter votre taux d'acquisition de nouveaux clients" %>
+              <%= f.input :special_offer, label: "Détails", placeholder: "1 mois offert pour toute réservation de plus de 6 mois...", hint: "Une offre spéciale peut être une réduction sur une durée particulière. Cette ligne permet d'augmenter votre taux d'acquisition de nouveaux clients. Il vous sera possible de modifier cette offre en répondant à la demande de devis" %>
             </div>
           </div>
           <h2>Photos</h2>
+          <div class="row">
+            <div class="col-xs-12">
+            <%= f.input :photos, label: "Téléchargez jusqu'à 6 photos", as: :attachinary %>
+            </div>
+          </div>
           <%= f.submit "Créer et publier mon espace", class: "btn btn-primary"  %>
         <% end %>
       </div>
     </div>
   </div>
 </div>
-
-
-<!-- create_table "coworkings", force: :cascade do |t|
-    t.string   "title"
-    t.string   "name"
-    t.string   "address"
-    t.string   "zip"
-    t.string   "city"
-    t.integer  "surface"
-    t.integer  "workstation_number"
-    t.text     "description"
-    t.string   "special_offer"
-    t.integer  "user_id"
-    t.datetime "created_at",              null: false
-    t.datetime "updated_at",              null: false
-    t.boolean  "tv"
-    t.boolean  "erp_room"
-    t.boolean  "auditorium"
-    t.boolean  "kitchen"
-    t.boolean  "nap_zone"
-    t.boolean  "terrace"
-    t.boolean  "internet"
-    t.boolean  "photocopier"
-    t.boolean  "shower"
-    t.boolean  "locker"
-    t.boolean  "garden"
-    t.boolean  "rj45_socket"
-    t.boolean  "optical_fiber"
-    t.boolean  "storage"
-    t.boolean  "furniture"
-    t.boolean  "ohp"
-    t.boolean  "phone"
-    t.boolean  "cooling_system"
-    t.boolean  "alarm"
-    t.boolean  "board"
-    t.boolean  "computer"
-    t.boolean  "waiting_room"
-    t.boolean  "fax"
-    t.boolean  "disabled_access"
-    t.boolean  "bar"
-    t.boolean  "lift"
-    t.boolean  "common_space"
-    t.boolean  "local_bike"
-    t.boolean  "parking"
-    t.boolean  "discretionnary_coffee"
-    t.boolean  "cleaning_service"
-    t.boolean  "welcome_desk_service"
-    t.boolean  "mail_management_service"
-    t.boolean  "office_supplies"
-    t.index ["user_id"], name: "index_coworkings_on_user_id", using: :btree
-  end -->
