--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,23 +1,25 @@
-<div class="container">
-  <div class="row">
-  <div class=" col-xs-12 col-sm-4 col-sm-offset-4">
-      <div class="form-login">
-        <h2>Mot de passe oublié ?</h2>
+<!-- <div class="wrapper-pages"> -->
+  <div class="container">
+    <div class="row">
+    <div class=" col-xs-12 col-sm-4 col-sm-offset-4">
+        <div class="form-login-password">
+          <h2>Mot de passe oublié ?</h2>
 
-        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <%= f.error_notification %>
+          <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= f.error_notification %>
 
-        <div class="form-inputs">
-          <%= f.input :email, label: "Email" required: true, autofocus: true %>
+          <div class="form-inputs">
+            <%= f.input :email, label: "Email", required: true, autofocus: true %>
+          </div>
+
+          <div class="form-actions">
+            <%= f.button :submit, "Envoyez les instructions" %>
+          </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
         </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "Envoyez les instructions" %>
-        </div>
-        <% end %>
-
-        <%= render "devise/shared/links" %>
       </div>
     </div>
   </div>
-</div>
+<!-- </div> -->
