--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -20,7 +20,7 @@
         </div>
         <div class="btn-no-demand">
           <% if user_signed_in? %>
-          <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+          <%= link_to new_demand_path, method: :get, class: 'form-search' do %>
           <div class="flexbox">
             <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
           </div>
