--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -22,7 +22,7 @@
           <p>Après avoir passé près de 6 ans dans le conseil en immobilier d'entreprise, j'ai décidé de développer The Real Estate Jungle pour adapter le conseil/brokerage immobilier de bureaux aux nouveaux modes de travail. Ce marché connaît une profonde mutation, d'une part car les modes de travail des utilisateurs (grandes entreprises et startups) changent, d'autre part car la commercialisation des biens immobiliers se digitalise.
           <br>
           <br>
-          Avec The Real Estate Jungle, je souhaite être le partenaire privilégié des startups et des grands groupes afin de leur faire bénéficier d'un accompagnement d'expert sur le marché de l'immobilier "flexible". Afin d'apporter un conseil objectif et pertinent, il est important de connaître les acteurs du marché, qu'ils soient utilisateurs, propriétaires ou encore prestataires de services (Coworking). C'est dans cet esprit de guide que The Real Estate Jungle intervient auprès de ses clients, de la phase amont de l'analyse des besoins à la finalisation des négociations.
+          Avec The Real Estate Jungle, nous souhaitons être le partenaire privilégié des startups et des grands groupes afin de leur faire bénéficier d'un accompagnement d'expert sur le marché de l'immobilier "flexible". Afin d'apporter un conseil objectif et pertinent, il est important de connaître les acteurs du marché, qu'ils soient utilisateurs, propriétaires ou encore prestataires de services (Coworking). C'est dans cet esprit de guide que The Real Estate Jungle intervient auprès de ses clients, de la phase amont de l'analyse des besoins à la finalisation des négociations.
           <br>
           <br>
           En nous faisant confiance, vous bénéficierez :
@@ -53,7 +53,7 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
         <div class="btn-contact">
           <% if user_signed_in? %>
-          <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+          <%= link_to new_demand_path, method: :get, class: 'form-search' do %>
           <div class="flexbox">
             <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
           </div>
