--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -11,19 +11,19 @@
               Le guide qui accompagne les <span class="color-animation"></span> <br> dans leur recherche de <em class="color-animation"></em>
             </p>
           </div>
-          <% if user_signed_in? %>
-          <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+          <%# if user_signed_in? %>
+          <%= link_to new_demand_path, method: :get, class: 'form-search' do %>
           <div class="flexbox">
             <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
           </div>
           <% end %>
-          <% else %>
-          <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
-          <div class="flexbox">
-            <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
-          </div>
-          <% end %>
-          <% end %>
+          <%# else %>
+          <%#= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+          <!-- <div class="flexbox">
+            <%#= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+          </div> -->
+          <%# end %>
+          <%# end %>
         </div>
       </div>
     </div>
