--- a/app/assets/stylesheets/demands/_new_demand.scss
+++ b/app/assets/stylesheets/demands/_new_demand.scss
@@ -1,3 +1,38 @@
+.form-demand-new {
+  background: white;
+  padding: 10px 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  h1 {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 20px;
+    color: $my-green;
+  }
+  .btn {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: $my-white;
+    font-size: 15px;
+  }
+  .help-block {
+    font-size: 10px;
+  }
+  .form-control {
+    font-size: 12px;
+  }
+  label {
+    font-size: 15px;
+  }
+}
+
 .container .demand-container {
   padding: 2px;
   margin: 10px;
