--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -58,7 +58,7 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
         <div class="btn-concept">
           <% if user_signed_in? %>
-          <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+          <%= link_to new_demand_path, method: :get, class: 'form-search' do %>
           <div class="flexbox">
             <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
           </div>
